Fix: Remove unwanted horizontal scrollbar by adjusting the width

--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: linear-gradient(to bottom, white, #d5effc);
   background-repeat: no-repeat;
   background-attachment: fixed;
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 98vw;
   margin: 0;
   font-family: sans-serif;
   height: 100%;
-  margin: 0;
 }
 
 @keyframes marquee {
